applications/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visitor-app-service
  namespace: dev
  labels:
    app: visitor-app
    environment: dev
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30000
    protocol: TCP
    name: http
  selector:
    app: visitor-app
    environment: dev
